[gd_scene load_steps=10 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainWindow.gd" type="Script" id=2]
[ext_resource path="res://Home.tscn" type="PackedScene" id=3]
[ext_resource path="res://Calendar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tasks.tscn" type="PackedScene" id=5]
[ext_resource path="res://Graph.tscn" type="PackedScene" id=6]
[ext_resource path="res://Buttons.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1073.0
margin_bottom = 2333.0

[node name="MainWindow" type="Control" parent="VBoxContainer"]
margin_right = 1066.0
margin_bottom = 2110.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Home" parent="VBoxContainer/MainWindow" instance=ExtResource( 3 )]
visible = false

[node name="Calendar" parent="VBoxContainer/MainWindow" instance=ExtResource( 4 )]
visible = false

[node name="Graph" parent="VBoxContainer/MainWindow" instance=ExtResource( 6 )]
visible = false

[node name="Tasks" parent="VBoxContainer/MainWindow" instance=ExtResource( 5 )]
visible = false

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 2114.0
margin_right = 1066.0
margin_bottom = 2326.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
script = ExtResource( 7 )

[node name="HomeButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 263.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
text = "Home"

[node name="CalendarButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 267.0
margin_right = 531.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
text = "Calendar"

[node name="GraphButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 535.0
margin_right = 798.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
text = "Graph"

[node name="TasksButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 802.0
margin_right = 1066.0
margin_bottom = 212.0
size_flags_horizontal = 3
toggle_mode = true
text = "Tasks"

[connection signal="pressed" from="VBoxContainer/Buttons/HomeButton" to="VBoxContainer/MainWindow" method="_on_HomeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/CalendarButton" to="VBoxContainer/MainWindow" method="_on_CalendarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/GraphButton" to="VBoxContainer/MainWindow" method="_on_GraphButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/TasksButton" to="VBoxContainer/MainWindow" method="_on_TasksButton_pressed"]
